# copyable_function

./: .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-check.yml  pre-commit-update.yml  vcpkg-release.yml
cmake/: beman.copyable_function-config.cmake.in
examples/: CMakeLists.txt
include/beman/copyable_function/: CMakeLists.txt  copyable_function.hpp  copyable_function_helper.h  copyable_function_impl.hpp  helper.h
infra/: .pre-commit-config.yaml
infra/.github/workflows/: pre-commit.yml
infra/cmake/: BuildTelemetry.cmake  BuildTelemetryConfig.cmake  use-fetch-content.cmake
port/: portfile.cmake.in  vcpkg.json.in
src/beman/copyable_function/: CMakeLists.txt  copyable_function.cpp
tests/beman/copyable_function/: CMakeLists.txt  assignment.test.cpp  call.test.cpp  common.h  ctor.test.cpp  swap.test.cpp
